test/corpus/L1/negative/byte-range.st
"---
kind: negative
section: error.byte-range
codes: E_BYTE_RANGE
note: byte array element 256 exceeds valid range 0-255
---"
#[256]
